PR26461 UBSAN: elfxx-ia64.c:747 cannot be represented

PR 26461
	* elfxx-ia64.c (ia64_elf_install_value): Make expressions unsigned
	that might shift values into sign bit.